# contextpack

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/: main.py
src/contextpack/: cli.py
tests/: test_smoke.py
