[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextpack"
version = "0.1.0"
description = "Context bundling CLI for agent handoffs"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
contextpack = "contextpack.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
